--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<DOCTYPE html>
-<html lang="en-ca"
-<Head>
+<!DOCTYPE html>
+<html lang="en-ca">
+<head>
   <meta charset="utf-8">
   <title>HTML tamplate</title>
   <meta name="viewport" content="with=device-width,initital-scale=1">
@@ -16,8 +16,8 @@
   <main>
    <p>Lorem ipsum dolor sit amet.</p>
    <img src="images/logo.svg" alt="">
-   >a href="https://www.wikipedia.org">Wikipedia</a>
-<main>
+   <a href="https://www.wikipedia.org">Wikipedia</a>
+  </main>
 
 </body>
 </html>
